//
// Copyright (C) 2024 EA group inc.
// Author: Jeff.li lijippy@163.com
// All rights reserved.
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published
// by the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.
//
//


syntax="proto2";
package example;

option cc_generic_services = true;

message HttpRequest {};
message HttpResponse {};

service HttpService {
  rpc Echo(HttpRequest) returns (HttpResponse);
  rpc EchoProtobuf(HttpRequest) returns (HttpResponse);
};

service FileService {
  rpc default_method(HttpRequest) returns (HttpResponse);
};

service QueueService {
  rpc start(HttpRequest) returns (HttpResponse);
  rpc stop(HttpRequest) returns (HttpResponse);
  rpc getstats(HttpRequest) returns (HttpResponse);
};

service HttpSSEService {
  rpc stream(HttpRequest) returns (HttpResponse);
};
